<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_sky"
    android:orientation="vertical"
    android:weightSum="1">


    <EditText
        android:id="@+id/txtTotalTime"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/time" />

    <EditText
        android:id="@+id/txtAvgTime"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/avgtime" />

    <EditText
        android:id="@+id/txtLongestTime"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/longesttime" />

    <EditText
        android:id="@+id/txtNumWrong"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tries" />

    <EditText
        android:id="@+id/txtScore"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/score" />

    <EditText
        android:id="@+id/txtMode"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mode" />

    <TextView
        android:id="@+id/txtSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:text="@string/btncontinue" />

</LinearLayout>